added build and run instructions to readme