@@ -1,7 +1,15 @@
-## Ourcraft
-A minecraft inspired game engine
+# Ourcraft
+A minecraft inspired game engine.
 
 https://discord.gg/BUhTVnS5ua
+
+## How to Build & Run (for Windows)
+1. Change the `lwjgl.natives` flag in pom.xml to your OS. (default is set to Linux)  
+2. Add the `--enable-preview` flag to your compiler.  
+3. Run `package.sh` or run the package command in Maven.  
+4. Run ourcraft-X.X.X-jar-with-dependencies.jar with the JVM flag `--enable-preview` and the program arguements 
+`--devBuild --integratedServer`.
+5. Double click localhost:<port\> to launch into the demo.
 
 ## YourKit
 ![](https://www.yourkit.com/images/yklogo.png)
